# tauri-plugin-remote-push

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/app/tauri/remotepush/: FCMService.kt  PushNotificationPlugin.kt
android/src/main/java/com/tauri/remotepush/: PushNotificationPlugin.kt
android/src/test/java/app/tauri/remotepush/: NotificationPayloadTest.kt
guest-js/: index.ts
guest-js/__tests__/: normalizeNotification.test.ts
ios/: Package.resolved  Package.swift
ios/Sources/: PushNotificationPlugin.swift
ios/Tests/: NormalizePayloadTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
